[TDS-83] Add and style booking link for itineraries that can be booked through the tds booking portal

--- a/i18n/en-US.yml
+++ b/i18n/en-US.yml
@@ -769,6 +769,7 @@ common:
   # Note to translator: these values are width-constrained.
   forms:
     back: Back
+    bookOnline: Book Online
     cancel: Cancel
     clear: Clear
     error: error!
