change trip detail tab text from call to book

--- a/i18n/en-US.yml
+++ b/i18n/en-US.yml
@@ -459,7 +459,7 @@ components:
   TabbedItineraries:
     optionNumber: "Option {optionNum, number}"
     # Note to translator: This text is width-constrained.
-    mustCallAhead: Must call ahead!
+    mustCallAhead: Must book ahead!
     fareCost: >
       {hasMaxFare, select, 
         true {{minTotalFare}+}
