--- a/i18n/en-US.yml
+++ b/i18n/en-US.yml
@@ -712,7 +712,7 @@ otpUi:
     departure: Depart <strong>{departureDate, date, long}</strong> at <strong>{departureDate, time, short}</strong>
     flexDropOffMessage: >
       {hasLeadTime, select,
-        true {To get off at your destination, you must call
+        true {To get off at your destination, call
           {hasPhone, select,
             true {{phoneNumber}}
             other {ahead}
@@ -720,7 +720,7 @@ otpUi:
         other {You must tell the operator where you want to get off}
       }.
     flexPickupMessage: >
-      To take this route, you must call {hasPhone, select,
+      To take this route, call {hasPhone, select,
         true {{phoneNumber}}
         other {ahead}
       }{hasLeadTime, select,
